Don't wrap formview into a table, remove unneeded (w/o outer table) header style fix

--- a/R7.University.EduProgram/module.css
+++ b/R7.University.EduProgram/module.css
@@ -7,5 +7,3 @@
 }
 
 .u8y-eduprogram .u8y-not-published { color:#ddd }
-
-.u8y-eduprogram .u8y-eduprogram-info h3 { margin-top:0 }
